Package: R.rsp
==============

Version: 0.19.5 [2014-10-03]
o CLEANUP: The vignette TeX engine no longer generates a tangle script.
o DOCUMENTATION: Added vignette 'R packages: LaTeX vignettes'.


Version: 0.19.4 [2014-09-03]
o ROBUSTNESS: Now RSP preprocessing directive <%@if name="<name>" ...%>
  does a better jobs of locating RSP variables with a smaller risk of
  finding other R objects.


Version: 0.19.3 [2014-08-29]
o DOCUMENTATION: Updated the 'Dynamic document creation using RSP'
  package vignette.
o Added Unix shell (and Windows batch) scripts 'rsource', 'rfile'
  and 'rcat' to system.file("bin", package="R.rsp").  These scripts
  are convenient wrappers that uses Rscript internally.
o CLEANUP: Removed false R CMD check NOTEs recently introduced.
o Bumped package dependencies.


Version: 0.19.2 [2014-07-02]
o Added support for cut'n'paste and copy'n'paste preprocessing
  directives.


Version: 0.19.1 [2014-06-28]
o GENERALIZATION: Now it is possible to use any symbol for enclosing
  attribute values in RSP directives in addition to the current x='y'
  and x="y" ones, e.g. x=.y., x=|y|, and so on.  Furthermore, paired
  brackets may also be used, e.g. x={y}, x=[y], x=<y> and x=(y), and
  then also in matched replicates, e.g. x={{{y}}}.  Added several
  package system tests for this.


Version: 0.19.0 [2014-06-07]
o Bumped version.


Version: 0.18.7 [2014-06-02]
o BUG FIX: Trying to assign an empty string to an RSP preprocessing
  variable would not set the variable but return its current value or
  given an error if it did not exist, e.g.  <%@string empty=''%> could
  throw "No such variable ('empty')".  Added system test for this.


Version: 0.18.6 [2014-05-30]
o Now rcompile() can write to file and if the input is a file, then
  it does so by default.


Version: 0.18.5 [2014-05-30]
o RSP directives <%@meta ...%>, <%@string ...%>, ..., <%@integer ...%>
  gained attribute 'default' for getting their values.